--- a/GUI/Design.ui
+++ b/GUI/Design.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>1237</width>
-    <height>953</height>
+    <height>919</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Polarization by Conical Refraction - UAB Quantum and Atom Optics Group</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTabWidget" name="tabWidget">
@@ -19,8 +19,8 @@
      <rect>
       <x>9</x>
       <y>9</y>
-      <width>1221</width>
-      <height>611</height>
+      <width>1211</width>
+      <height>671</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -198,10 +198,10 @@
      <widget class="QTabWidget" name="tabWidget_2">
       <property name="geometry">
        <rect>
-        <x>0</x>
+        <x>9</x>
         <y>0</y>
-        <width>1221</width>
-        <height>581</height>
+        <width>1191</width>
+        <height>531</height>
        </rect>
       </property>
       <property name="currentIndex">
@@ -216,11 +216,11 @@
        <attribute name="title">
         <string>K2 - Rotatation Algorithm</string>
        </attribute>
-       <widget class="QRadioButton" name="radioButton">
+       <widget class="QRadioButton" name="brute_rot">
         <property name="geometry">
          <rect>
           <x>30</x>
-          <y>50</y>
+          <y>100</y>
           <width>231</width>
           <height>32</height>
          </rect>
@@ -228,78 +228,352 @@
         <property name="text">
          <string>Brute Force Grid Search</string>
         </property>
+        <attribute name="buttonGroup">
+         <string notr="true">buttonGroup_2</string>
+        </attribute>
        </widget>
-       <widget class="QRadioButton" name="radioButton_2">
+       <widget class="QRadioButton" name="fibonacci_rot">
         <property name="geometry">
          <rect>
           <x>30</x>
-          <y>200</y>
+          <y>150</y>
           <width>271</width>
           <height>32</height>
          </rect>
         </property>
         <property name="text">
-         <string>Golden Ratio 3 point search</string>
+         <string>Fibonacci 3 point search</string>
         </property>
+        <property name="checked">
+         <bool>false</bool>
+        </property>
+        <attribute name="buttonGroup">
+         <string notr="true">buttonGroup_2</string>
+        </attribute>
        </widget>
-       <widget class="QRadioButton" name="radioButton_3">
+       <widget class="QRadioButton" name="quadratic_rot">
         <property name="geometry">
          <rect>
-          <x>20</x>
-          <y>340</y>
+          <x>40</x>
+          <y>190</y>
           <width>251</width>
           <height>61</height>
          </rect>
         </property>
         <property name="text">
-         <string>Yet even better one
-search for convex</string>
+         <string>Quadratic Fit 3 point search</string>
         </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+        <attribute name="buttonGroup">
+         <string notr="true">buttonGroup_2</string>
+        </attribute>
        </widget>
        <widget class="QGroupBox" name="groupBox">
         <property name="geometry">
          <rect>
           <x>360</x>
           <y>20</y>
-          <width>841</width>
-          <height>141</height>
+          <width>321</width>
+          <height>201</height>
          </rect>
         </property>
         <property name="title">
          <string>Parameters for Brute Force Search</string>
         </property>
+        <widget class="QLabel" name="ange_step_label">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>30</y>
+           <width>121</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Angle Step 1 (rad):</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="angle_step_1">
+         <property name="geometry">
+          <rect>
+           <x>140</x>
+           <y>30</y>
+           <width>71</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>0.3</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="angle_step_2">
+         <property name="geometry">
+          <rect>
+           <x>140</x>
+           <y>70</y>
+           <width>71</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>0.07</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_8">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>70</y>
+           <width>121</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Angle Step 2 (rad):</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_9">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>110</y>
+           <width>121</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Angle Step 3 (rad):</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="angle_step_3">
+         <property name="geometry">
+          <rect>
+           <x>140</x>
+           <y>110</y>
+           <width>71</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>0.005</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_10">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>140</y>
+           <width>141</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Zoom 1 Ratio (over 1):</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="zoom1_ratio">
+         <property name="geometry">
+          <rect>
+           <x>170</x>
+           <y>140</y>
+           <width>71</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>0.4</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="zoom2_ratio">
+         <property name="geometry">
+          <rect>
+           <x>170</x>
+           <y>170</y>
+           <width>71</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>0.2</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_11">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>170</y>
+           <width>141</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Zoom 2 Ratio (over 1):</string>
+         </property>
+        </widget>
        </widget>
        <widget class="QGroupBox" name="groupBox_2">
         <property name="geometry">
          <rect>
           <x>360</x>
-          <y>180</y>
-          <width>831</width>
-          <height>151</height>
+          <y>230</y>
+          <width>321</width>
+          <height>101</height>
          </rect>
         </property>
         <property name="title">
-         <string>Parameters for Golden Ratio Search</string>
+         <string>Parameters for Fibonacci Search</string>
         </property>
+        <widget class="QLabel" name="label_12">
+         <property name="geometry">
+          <rect>
+           <x>30</x>
+           <y>30</y>
+           <width>101</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Precision* (rad):</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="precision_fib">
+         <property name="geometry">
+          <rect>
+           <x>140</x>
+           <y>30</y>
+           <width>71</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>0.01</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_17">
+         <property name="geometry">
+          <rect>
+           <x>30</x>
+           <y>70</y>
+           <width>131</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Maximum Points:</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="max_points_fib">
+         <property name="geometry">
+          <rect>
+           <x>140</x>
+           <y>70</y>
+           <width>71</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>10000</string>
+         </property>
+        </widget>
        </widget>
        <widget class="QGroupBox" name="groupBox_3">
         <property name="geometry">
          <rect>
           <x>360</x>
           <y>350</y>
-          <width>831</width>
-          <height>151</height>
+          <width>321</width>
+          <height>141</height>
          </rect>
         </property>
         <property name="title">
-         <string>Parameters for Convex Search</string>
+         <string>Parameters for Quadratic Search</string>
         </property>
+        <widget class="QLabel" name="label_14">
+         <property name="geometry">
+          <rect>
+           <x>40</x>
+           <y>40</y>
+           <width>181</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Initial guess angle delta (rad):</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="intial_guess_delta">
+         <property name="geometry">
+          <rect>
+           <x>230</x>
+           <y>40</y>
+           <width>71</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>0.1</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="precision_quad">
+         <property name="geometry">
+          <rect>
+           <x>230</x>
+           <y>80</y>
+           <width>71</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>0.01</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_15">
+         <property name="geometry">
+          <rect>
+           <x>40</x>
+           <y>80</y>
+           <width>101</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Precision* (rad):</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_16">
+         <property name="geometry">
+          <rect>
+           <x>40</x>
+           <y>120</y>
+           <width>131</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Maximum Iterations:</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="max_it_quad">
+         <property name="geometry">
+          <rect>
+           <x>230</x>
+           <y>120</y>
+           <width>71</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>10000</string>
+         </property>
+        </widget>
        </widget>
        <widget class="QLabel" name="label">
         <property name="geometry">
          <rect>
-          <x>20</x>
-          <y>10</y>
+          <x>30</x>
+          <y>60</y>
           <width>251</width>
           <height>31</height>
          </rect>
@@ -308,17 +582,84 @@ search for convex</string>
          <string>Select the Search Algorithm</string>
         </property>
        </widget>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="run_rotation_algorithm">
         <property name="geometry">
          <rect>
-          <x>120</x>
-          <y>480</y>
+          <x>100</x>
+          <y>280</y>
           <width>121</width>
           <height>41</height>
          </rect>
         </property>
         <property name="text">
          <string>RUN</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="theta_max">
+        <property name="geometry">
+         <rect>
+          <x>220</x>
+          <y>20</y>
+          <width>41</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>np.pi</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="theta_min">
+        <property name="geometry">
+         <rect>
+          <x>150</x>
+          <y>20</y>
+          <width>41</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>-np.pi</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_5">
+        <property name="geometry">
+         <rect>
+          <x>30</x>
+          <y>20</y>
+          <width>121</width>
+          <height>16</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Angle Range (rad):</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_6">
+        <property name="geometry">
+         <rect>
+          <x>200</x>
+          <y>20</y>
+          <width>21</width>
+          <height>16</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>to</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_13">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>360</y>
+          <width>381</width>
+          <height>41</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>*Remember that the precision will have a minimum depending
+ on the image quality and the minimum rotation arithmetics.
+Noise or discretization can induce plateaus in the minimum</string>
         </property>
        </widget>
       </widget>
@@ -328,15 +669,107 @@ search for convex</string>
        </attribute>
       </widget>
      </widget>
+     <widget class="QRadioButton" name="use_converted_i203">
+      <property name="geometry">
+       <rect>
+        <x>470</x>
+        <y>610</y>
+        <width>261</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string> ./i203_converted_images</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="use_converted_i607">
+      <property name="geometry">
+       <rect>
+        <x>470</x>
+        <y>590</y>
+        <width>261</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string> ./i607_converted_images</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_7">
+      <property name="geometry">
+       <rect>
+        <x>280</x>
+        <y>590</y>
+        <width>241</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Use all Converted Images in 
+Output Data Directory:</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="use_current_images">
+      <property name="geometry">
+       <rect>
+        <x>320</x>
+        <y>540</y>
+        <width>291</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Use Selected Images (if still not
+converted it will be done now)</string>
+      </property>
+      <property name="checked">
+       <bool>false</bool>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="show_plots">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>550</y>
+        <width>100</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Show Plots</string>
+      </property>
+      <property name="autoExclusive">
+       <bool>false</bool>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="output_plots">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>550</y>
+        <width>100</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Output Plots</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
+      <property name="autoExclusive">
+       <bool>false</bool>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QPlainTextEdit" name="log_text">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>630</y>
+      <x>10</x>
+      <y>690</y>
       <width>1191</width>
-      <height>251</height>
+      <height>171</height>
      </rect>
     </property>
     <property name="plainText">
@@ -355,7 +788,7 @@ Note that if &quot;Convert Selected Images&quot; is not clicked before running t
      <x>0</x>
      <y>0</y>
      <width>1237</width>
-     <height>31</height>
+     <height>20</height>
     </rect>
    </property>
   </widget>
@@ -363,4 +796,8 @@ Note that if &quot;Convert Selected Images&quot; is not clicked before running t
  </widget>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="buttonGroup"/>
+  <buttongroup name="buttonGroup_2"/>
+ </buttongroups>
 </ui>
