--- a/GUI/Design.ui
+++ b/GUI/Design.ui
@@ -20,7 +20,7 @@
       <x>9</x>
       <y>9</y>
       <width>1211</width>
-      <height>671</height>
+      <height>661</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -344,7 +344,8 @@
           </rect>
          </property>
          <property name="text">
-          <string>Angle Step 3 (rad):</string>
+          <string>Angle Step 3 (rad)
+Precision:</string>
          </property>
         </widget>
         <widget class="QLineEdit" name="angle_step_3">
@@ -503,7 +504,7 @@
           <string>Initial guess angle delta (rad):</string>
          </property>
         </widget>
-        <widget class="QLineEdit" name="intial_guess_delta">
+        <widget class="QLineEdit" name="initial_guess_delta">
          <property name="geometry">
           <rect>
            <x>230</x>
@@ -652,8 +653,8 @@
          <rect>
           <x>0</x>
           <y>360</y>
-          <width>381</width>
-          <height>41</height>
+          <width>551</width>
+          <height>101</height>
          </rect>
         </property>
         <property name="text">
@@ -788,7 +789,7 @@ Note that if &quot;Convert Selected Images&quot; is not clicked before running t
      <x>0</x>
      <y>0</y>
      <width>1237</width>
-     <height>20</height>
+     <height>31</height>
     </rect>
    </property>
   </widget>
@@ -797,7 +798,6 @@ Note that if &quot;Convert Selected Images&quot; is not clicked before running t
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroup"/>
   <buttongroup name="buttonGroup_2"/>
  </buttongroups>
 </ui>
