--- a/GUI/Design.ui
+++ b/GUI/Design.ui
@@ -290,7 +290,8 @@ Interpolation Algorithm:</string>
            <item row="4" column="0" colspan="2">
             <widget class="QLabel" name="label_18">
              <property name="text">
-              <string>Affine Transformation Interpolation Algorithm:</string>
+              <string>Affine Transformation Interpolation Algorithm 
+(for algorithms R, M):</string>
              </property>
             </widget>
            </item>
@@ -480,16 +481,6 @@ Precision:</string>
              </property>
              <property name="text">
               <string>0.1</string>
-             </property>
-            </widget>
-           </item>
-           <item row="9" column="0">
-            <widget class="QRadioButton" name="fibonacci">
-             <property name="text">
-              <string>Fibonacci 3 point search</string>
-             </property>
-             <property name="checked">
-              <bool>false</bool>
              </property>
             </widget>
            </item>
@@ -694,6 +685,16 @@ Precision:</string>
              </layout>
             </widget>
            </item>
+           <item row="9" column="0">
+            <widget class="QRadioButton" name="fibonacci">
+             <property name="text">
+              <string>Fibonacci 3 point search</string>
+             </property>
+             <property name="checked">
+              <bool>false</bool>
+             </property>
+            </widget>
+           </item>
           </layout>
          </widget>
         </item>
@@ -706,7 +707,7 @@ Precision:</string>
            </size>
           </property>
           <property name="currentIndex">
-           <number>3</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="tab_3">
            <attribute name="title">
@@ -898,7 +899,7 @@ Precision:</string>
                <string>Center exactly in Gravicenter</string>
               </property>
               <property name="checked">
-               <bool>true</bool>
+               <bool>false</bool>
               </property>
               <attribute name="buttonGroup">
                <string notr="true">buttonGroup_3</string>
@@ -908,7 +909,7 @@ Precision:</string>
             <item row="0" column="2" rowspan="2" alignment="Qt::AlignLeft">
              <widget class="QLineEdit" name="angle_bin_size_H">
               <property name="text">
-               <string>0.3</string>
+               <string>0.1</string>
               </property>
              </widget>
             </item>
@@ -916,6 +917,9 @@ Precision:</string>
              <widget class="QRadioButton" name="use_raw_idx_bin_H">
               <property name="text">
                <string>Use Raw Indices Binning</string>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
               </property>
               <attribute name="buttonGroup">
                <string notr="true">buttonGroup_9</string>
@@ -928,7 +932,7 @@ Precision:</string>
                <string>Use Raw Indices Masker</string>
               </property>
               <property name="checked">
-               <bool>true</bool>
+               <bool>false</bool>
               </property>
               <attribute name="buttonGroup">
                <string notr="true">buttonGroup_9</string>
@@ -940,6 +944,9 @@ Precision:</string>
               <property name="text">
                <string>Center in middle pixel of 
 centered image</string>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
               </property>
               <attribute name="buttonGroup">
                <string notr="true">buttonGroup_3</string>
@@ -955,6 +962,9 @@ centered image</string>
             </item>
             <item row="4" column="3">
              <widget class="QRadioButton" name="integrate_interpol_H">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
               <property name="text">
                <string>Integrate Interpolation</string>
               </property>
@@ -965,6 +975,9 @@ centered image</string>
             </item>
             <item row="1" column="4" rowspan="2">
              <widget class="QRadioButton" name="fit_cos_H">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
               <property name="text">
                <string>Refine minimum fitting to cos^2</string>
               </property>
@@ -986,6 +999,9 @@ centered image</string>
            <layout class="QGridLayout" name="gridLayout_5">
             <item row="2" column="10" rowspan="2">
              <widget class="QPushButton" name="run_mirror_algorithm">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
               <property name="maximumSize">
                <size>
                 <width>500</width>
@@ -1131,7 +1147,7 @@ centered image</string>
       <property name="maximumSize">
        <size>
         <width>16777215</width>
-        <height>200</height>
+        <height>300</height>
        </size>
       </property>
       <property name="plainText">
@@ -1152,7 +1168,7 @@ Note that if &quot;Convert Selected Images&quot; is not clicked before running t
      <x>0</x>
      <y>0</y>
      <width>1363</width>
-     <height>31</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
@@ -1161,11 +1177,11 @@ Note that if &quot;Convert Selected Images&quot; is not clicked before running t
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroup_5"/>
-  <buttongroup name="buttonGroup_8"/>
   <buttongroup name="buttonGroup_4"/>
-  <buttongroup name="buttonGroup_9"/>
-  <buttongroup name="buttonGroup_3"/>
   <buttongroup name="buttonGroup_6"/>
+  <buttongroup name="buttonGroup_9"/>
+  <buttongroup name="buttonGroup_8"/>
+  <buttongroup name="buttonGroup_3"/>
+  <buttongroup name="buttonGroup_5"/>
  </buttongroups>
 </ui>
