--- a/GUI/Design.ui
+++ b/GUI/Design.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1363</width>
-    <height>1105</height>
+    <height>936</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -997,20 +997,20 @@ centered image</string>
             <string>M - Mirror Algorithm</string>
            </attribute>
            <layout class="QGridLayout" name="gridLayout_5">
-            <item row="2" column="9">
-             <widget class="QRadioButton" name="left_vs_right_up_vs_down_M">
+            <item row="3" column="8">
+             <widget class="QRadioButton" name="use_image_center_M">
               <property name="text">
-               <string>Mirror Up vs Down Mode (max dif)</string>
+               <string>Use centered image center</string>
               </property>
               <attribute name="buttonGroup">
-               <string notr="true">buttonGroup_6</string>
+               <string notr="true">buttonGroup_5</string>
               </attribute>
              </widget>
             </item>
-            <item row="2" column="10" rowspan="2">
+            <item row="2" column="10" rowspan="4">
              <widget class="QPushButton" name="run_mirror_algorithm">
               <property name="enabled">
-               <bool>false</bool>
+               <bool>true</bool>
               </property>
               <property name="maximumSize">
                <size>
@@ -1025,6 +1025,9 @@ centered image</string>
             </item>
             <item row="0" column="5">
              <widget class="QLineEdit" name="theta_min_M">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
               <property name="maximumSize">
                <size>
                 <width>100</width>
@@ -1032,18 +1035,8 @@ centered image</string>
                </size>
               </property>
               <property name="text">
-               <string>-np.pi</string>
+               <string>-np.pi/2</string>
               </property>
-             </widget>
-            </item>
-            <item row="3" column="9">
-             <widget class="QRadioButton" name="mirror_vs_original_M">
-              <property name="text">
-               <string>Mirror vs Original Mode</string>
-              </property>
-              <attribute name="buttonGroup">
-               <string notr="true">buttonGroup_6</string>
-              </attribute>
              </widget>
             </item>
             <item row="0" column="4">
@@ -1072,20 +1065,30 @@ centered image</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="4" rowspan="2">
-             <widget class="QRadioButton" name="use_exact_grav_M">
+            <item row="0" column="9">
+             <widget class="QLabel" name="label_39">
               <property name="text">
-               <string>Use exact gravicenter</string>
+               <string>Select variant:</string>
               </property>
-              <property name="checked">
-               <bool>true</bool>
-              </property>
-              <attribute name="buttonGroup">
-               <string notr="true">buttonGroup_5</string>
-              </attribute>
              </widget>
             </item>
-            <item row="1" column="9">
+            <item row="0" column="8" alignment="Qt::AlignLeft">
+             <widget class="QLineEdit" name="theta_max_M">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>100</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>np.pi/2</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="9">
              <widget class="QRadioButton" name="left_vs_right_M">
               <property name="text">
                <string>Mirror Left vs Rigth Mode (min dif)</string>
@@ -1098,50 +1101,53 @@ centered image</string>
               </attribute>
              </widget>
             </item>
-            <item row="0" column="9">
-             <widget class="QLabel" name="label_39">
+            <item row="4" column="4">
+             <widget class="QRadioButton" name="use_affine_M">
               <property name="text">
-               <string>Select variant:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="4">
-             <widget class="QRadioButton" name="use_image_center_M">
-              <property name="text">
-               <string>Use centered image center</string>
-              </property>
-              <attribute name="buttonGroup">
-               <string notr="true">buttonGroup_5</string>
-              </attribute>
-             </widget>
-            </item>
-            <item row="3" column="6">
-             <widget class="QRadioButton" name="radioButton_2">
-              <property name="text">
-               <string>Use binning (for a,b)</string>
+               <string>Use Affine Mirrorring with interpolation:</string>
               </property>
               <attribute name="buttonGroup">
                <string notr="true">buttonGroup</string>
               </attribute>
              </widget>
             </item>
-            <item row="0" column="8" alignment="Qt::AlignLeft">
-             <widget class="QLineEdit" name="theta_max_M">
-              <property name="maximumSize">
-               <size>
-                <width>100</width>
-                <height>16777215</height>
-               </size>
-              </property>
+            <item row="2" column="8">
+             <widget class="QRadioButton" name="use_exact_grav_M">
               <property name="text">
-               <string>np.pi</string>
+               <string>Use exact gravicenter</string>
               </property>
+              <property name="checked">
+               <bool>true</bool>
+              </property>
+              <attribute name="buttonGroup">
+               <string notr="true">buttonGroup_5</string>
+              </attribute>
              </widget>
             </item>
-            <item row="1" column="6" rowspan="2">
-             <widget class="QRadioButton" name="radioButton">
+            <item row="3" column="9">
+             <widget class="QRadioButton" name="up_vs_down_M">
               <property name="text">
-               <string>Use Masking (for a,b)</string>
+               <string>Mirror Up vs Down Mode (max dif)</string>
+              </property>
+              <attribute name="buttonGroup">
+               <string notr="true">buttonGroup_6</string>
+              </attribute>
+             </widget>
+            </item>
+            <item row="3" column="4">
+             <widget class="QRadioButton" name="use_binning_M">
+              <property name="text">
+               <string>Use binning</string>
+              </property>
+              <attribute name="buttonGroup">
+               <string notr="true">buttonGroup</string>
+              </attribute>
+             </widget>
+            </item>
+            <item row="2" column="4">
+             <widget class="QRadioButton" name="use_masking_M">
+              <property name="text">
+               <string>Use Masking</string>
               </property>
               <property name="checked">
                <bool>true</bool>
@@ -1149,6 +1155,45 @@ centered image</string>
               <attribute name="buttonGroup">
                <string notr="true">buttonGroup</string>
               </attribute>
+             </widget>
+            </item>
+            <item row="4" column="5" colspan="2">
+             <widget class="QComboBox" name="interpolation_alg_M">
+              <item>
+               <property name="text">
+                <string>bicubic interpolation</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Lanczos interpolation over 8x8 neighborhood</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>bilinear interpolation</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>nearest neighbor interpolation</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Bit exact bilinear interpolation</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Bit exact nearest neighbor interpolation</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>resampling using pixel area relation</string>
+               </property>
+              </item>
              </widget>
             </item>
            </layout>
@@ -1191,7 +1236,7 @@ Note that if &quot;Convert Selected Images&quot; is not clicked before running t
      <x>0</x>
      <y>0</y>
      <width>1363</width>
-     <height>31</height>
+     <height>20</height>
     </rect>
    </property>
   </widget>
@@ -1200,12 +1245,12 @@ Note that if &quot;Convert Selected Images&quot; is not clicked before running t
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroup_8"/>
-  <buttongroup name="buttonGroup_3"/>
-  <buttongroup name="buttonGroup_5"/>
   <buttongroup name="buttonGroup_9"/>
+  <buttongroup name="buttonGroup_5"/>
+  <buttongroup name="buttonGroup_8"/>
   <buttongroup name="buttonGroup_6"/>
-  <buttongroup name="buttonGroup_4"/>
+  <buttongroup name="buttonGroup_3"/>
   <buttongroup name="buttonGroup"/>
+  <buttongroup name="buttonGroup_4"/>
  </buttongroups>
 </ui>
